tests/baselines/reference/emitter.asyncGenerators.objectLiteralMethods.es2018(strict=true).errors.txt
O2.ts(3,19): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
O3.ts(3,19): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.


==== O1.ts (0 errors) ====
    const o1 = {
        async * f() {
        }
    }
==== O2.ts (1 errors) ====
    const o2 = {
        async * f() {
            const x = yield;
                      ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
        }
    }
==== O3.ts (1 errors) ====
    const o3 = {
        async * f() {
            const x = yield 1;
                      ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
        }
    }
==== O4.ts (0 errors) ====
    const o4 = {
        async * f() {
            const x = yield* [1];
        }
    }
==== O5.ts (0 errors) ====
    const o5 = {
        async * f() {
            const x = yield* (async function*() { yield 1; })();
        }
    }
==== O6.ts (0 errors) ====
    const o6 = {
        async * f() {
            const x = await 1;
        }
    }
==== O7.ts (0 errors) ====
    const o7 = {
        async * f() {
            return 1;
        }
    }
    